# backend

./: .dockerignore  .env_sample  .gitignore  Dockerfile  README.md  docker-compose.yml  prestart.sh  pyproject.toml  run.sh
alembic/: env.py
alembic/versions/: 0d5c1cd6f0c8_.py  12a5e00eb3e0_.py  20f4202ab0da_.py  28e3ef930403_.py  2a60f634d3ff_.py  3b16dc6e91f3_.py  3b74af7cff99_.py  3c12154c2cf1_.py  3d5d20071650_.py  4309eb16000f_.py  44ea10a583fd_.py  4e04bf7b8667_.py  5aa8eafe9ea0_.py  62253a2562d8_.py  64d2d2716072_.py  6a00239cac5d_.py  74ae62318fd8_.py  7528ae221600_.py  75ef860b90a6_.py  76b15018fe31_.py  77e779daba2c_.py  7afc2bb7a888_.py  81389b961577_.py  836461bfa584_.py  8983fa81a3ec_.py  89c3c411c60d_.py  8aa99788f5c0_.py  8be5a200d62c_.py  8f6c55e551d9_.py  92679c88912b_.py  92f2a99d172c_.py  972ac9c38e44_.py  9955589c7818_.py  b6ecb44c4491_.py  c147c40621a6_.py  c71613eb0670_.py  d367864cc764_.py  d8bd36b3e5e8_.py  ef5a64ac9b31_.py  f869370e1b4b_.py
app/: backend_pre_start.py  initial_data.py  main.py
app/api/: deps.py
app/core/: config.py  security.py
app/crud/: __init__.py  base.py  crud_collaboration.py  crud_collaboration_bid.py  crud_collaboration_request.py  crud_message.py  crud_problem.py  crud_problem_bid.py  crud_user.py
app/db/: base.py  base_class.py  init_db.py  session.py
app/models/: __init__.py  collaboration.py  collaboration_request.py  message.py  post.py  problem.py  problem_bid.py  user.py
app/schemas/: __init__.py  collaboration.py  collaboration_bid.py  collaboration_request.py  message.py  problem.py  problem_bid.py  (+2 more)
(+12 files in other folders)
