[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["nvbinh15 <binh.pdc01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
gunicorn = "^20.1.0"
sqlalchemy = "^2.0.15"
alembic = "^1.11.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^8.2.2"
pydantic = {extras = ["email"], version = "^1.10.7"}
psycopg2-binary = "^2.9.6"
transformers = "^4.29.2"
sentencepiece = "^0.1.99"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
